[package]
name = "attribute_store"
version = "0.1.0"
authors.workspace = true
edition.workspace = true

[dependencies]
ink = { workspace = true, default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.11", default-features = false, features = ["derive"], optional = true }

[dev-dependencies]
ink_e2e = "6.0.0-beta.1"
ink_sandbox = { git = "https://github.com/use-ink/ink.git", branch = "6.0.0-beta" }

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
]
ink-as-dependency = []
e2e-tests = []
