[package]
name = "payment_integration"
version = "0.1.0"
authors = ["Arkavo Team"]
edition = "2024"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(ink_abi, values(any()))"] }

[dependencies]
ink = { version = "6.0.0-beta.1", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.11", default-features = false, features = ["derive"], optional = true }

[dev-dependencies]
ink_e2e = "6.0.0-beta.1"

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
]
ink-as-dependency = []
e2e-tests = []
