[package]
name = "deployer"
version = "0.1.0"
authors.workspace = true
edition.workspace = true

[[bin]]
name = "deployer"
path = "src/main.rs"

[dependencies]
# Substrate/Polkadot dependencies
subxt = "0.37"
sp-core = "34.0"
sp-keyring = "39.0"

# Async runtime
tokio = { version = "1.38", features = ["full"] }

# CLI and utilities
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
